export enum InvitationStatus {
  Pending,
  Accepted,
  Rejected,
  Canceled,
}
